<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Signal Generator</string>
  <string name="copyright">Copyright \u00A9 2017 <a href="https://billthefarmer.github.io">Bill Farmer</a>
  </string>
  <string name="licence">Licence <a href="https://www.gnu.org/licenses/gpl.txt">GNU GPLv3</a>
  </string>
  <string name="built">Built %s</string>

  <string name="settings">Settings</string>
  <string name="help">Help</string>
  <string name="sleep">Sleep</string>
  <string name="exact">Exact</string>
  <string name="bookmark">Bookmark</string>
  <string name="name">Name</string>
  <string name="frequency">Frequency</string>
  <string name="level">Level</string>
  <string name="enter">Enter frequency</string>
  <string name="cancel">Cancel</string>
  <string name="create">Create</string>
  <string name="clear">Clear</string>
  <string name="ok">OK</string>

  <string name="bookmark_added">Bookmark added %1.2f</string>
  <string name="bookmark_removed">Bookmark removed %1.2f</string>

  <string name="sine">Sine</string>
  <string name="sin">Sin</string>
  <string name="s">S</string>
  <string name="square">Square</string>
  <string name="squ">Squ</string>
  <string name="q">Q</string>
  <string name="sawtooth">Sawtooth</string>
  <string name="saw">Saw</string>
  <string name="w">W</string>

  <string name="mute">Mute</string>

  <string name="pref_about">About</string>
  <string name="pref_about_summ">Signal Generator <a href="https://github.com/billthefarmer/sig-gen/releases/latest">version %s</a></string>

  <string name="pref_theme">Theme</string>
  <string translatable="false" name="pref_theme_summ">%s</string>

  <string name="pref_duty">Square duty cycle</string>

</resources>
