<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

  <PreferenceCategory
      android:key="pref_theme_category"
      android:title="@string/pref_theme">

    <ListPreference
        android:defaultValue="@integer/def_theme"
        android:dialogIcon="?attr/pref_theme"
        android:entries="@array/pref_theme_entries"
        android:entryValues="@array/pref_theme_entry_values"
        android:icon="?attr/pref_theme"
        android:key="pref_theme"
        android:summary="@string/pref_theme_summ"
        android:title="@string/pref_theme" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_about_category"
      android:title="@string/pref_about">

    <org.billthefarmer.siggen.AboutPreference
        android:dialogIcon="?attr/pref_about"
        android:dialogLayout="@layout/about_dialog"
        android:icon="?attr/pref_about"
        android:key="pref_about"
        android:negativeButtonText=""
        android:summary="@string/pref_about_summ"
        android:title="@string/pref_about" />

  </PreferenceCategory>

</PreferenceScreen>
