<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    tools:ignore="Autofill">

  <EditText
      android:id="@+id/name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:hint="@string/name"
      android:inputType="textCapWords" />

  <EditText
      android:id="@+id/freq"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:hint="@string/frequency"
      android:inputType="numberDecimal" />

  <EditText
      android:id="@+id/level"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:hint="@string/level"
      android:inputType="numberDecimal|numberSigned" />

  <RadioGroup
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:orientation="vertical">

    <RadioButton
        android:id="@+id/sine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sine" />

    <RadioButton
        android:id="@+id/square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/square" />

    <RadioButton
        android:id="@+id/sawtooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sawtooth" />

  </RadioGroup>

  <CheckBox
      android:id="@+id/mute"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:text="@string/mute" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:orientation="horizontal"
      style="?android:attr/buttonBarStyle">

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        style="?android:attr/buttonBarButtonStyle" />

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        style="?android:attr/buttonBarButtonStyle" />

  </LinearLayout>

</LinearLayout>
